Подключение spikmi виджета

--- a/index.html
+++ b/index.html
@@ -74,5 +74,8 @@
       </div>
     </header>
     <!-- /.header -->
+
+    <!-- Подключение виджета обратной связи через соцсети-->
+    <script type="text/javascript" src="https://spikmi.com/Widget?Id=3501"></script>
   </body>
 </html>
