--- a/index.html
+++ b/index.html
@@ -179,6 +179,218 @@
 
         </div>
       </section>
+      <section class="section catalog">
+        <div class="container">
+          <h2 class="section-title section__title">
+            Каталог скинали
+          </h2>
+          <div class="catalog-block">
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/bench-560435_640.jpg" alt="">
+              <!-- /.img -->
+              <span class="catalog-card__tag">Коллажи</span>
+              <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like">
+                  <img src="img/like.png" width="16px" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/dandelion-445228_640.jpg" alt="">
+              <!-- /.img -->
+              <span class="catalog-card__tag">Авторская коллекция</span>
+              <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like">
+                  <img src="img/like.png" width="16px" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/dawn-190055_640.jpg" alt=""
+              <!-- /.img -->
+              <span class="catalog-card__tag">Коллажи</span>
+              <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like">
+                  <img src="img/like.png" width="16px" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/fall-1072821_640.jpg" alt="">
+              <!-- /.img -->
+              <span class="catalog-card__tag">Авторская коллекция</span>
+              <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like">
+                  <img src="img/like.png" width="16px" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/mountain-5195052_640.jpg" alt="">
+              <!-- /.img -->
+              <span class="catalog-card__tag">Коллажи</span>
+              <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like">
+                  <img src="img/like.png" width="16px" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/road-220058_640.jpg" alt="">
+              <!-- /.img -->
+              <span class="catalog-card__tag">Абстракция</span>
+              <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like">
+                  <img src="img/like.png" width="16px" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/sky-690293_640.jpg" alt="">
+              <!-- /.img -->
+              <span class="catalog-card__tag">Абстракция</span>
+              <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like">
+                  <img src="img/like.png" width="16px" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+
+            <div class="catalog-card catalog__card">
+              <img class="catalog-card__image" src="img/catalog/sunbeam-1547273_640.jpg" alt="">
+              <!-- /.img -->
+              <span class="catalog-card__tag">Абстракция</span>
+              <!-- /.catalog-card__tag -->
+              <div class="catalog-card__buttons">
+                <button class="button-fitting catalog-card__button">Примерить онлайн</button>
+                <!-- /.button-fitting catalog-card__button -->
+                <button class="button-add catalog-card__button">Заказать</button>
+                <!-- /.button-add catalog-card__button -->
+                <button class="button-like">
+                  <img src="img/like.png" width="16px" alt=""></button>
+                <!-- /.button-like -->
+              </div>
+              <!-- /.catalog-card__buttons -->
+            </div>
+            <!-- /.catalog-card -->
+          </div>
+          <div class="catalog__link">
+              <a href="#!" class="button catalog__link-more button_lg">Смотреть весь каталог скинали</a>
+              <span class="catalog__description">Более 3000 изображений скинали в 25 рубриках</span>
+          </div>
+          <!-- /.catalog-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section catalog -->
+      <section class="section blog">
+          <div class="container">
+              <div class="blog__heading">
+                <h3 class="blog__title">Полезное или что важно знать о скинали...</h3>
+                  <a href="#" class="blog__link-more">Читать все статьи</a>
+            </div>
+            <div class="blog-list">
+              <div class="blog-card blog-list__card">
+                <div class="blog-list__image">
+                  <img src="img/blog-list/avto-porshe-transport-19.png" alt=""></div>
+                <!-- /.blog-list__image -->
+                <div class="blog-list__text">
+                  Виды стекла
+                </div>
+                <!-- /.blog-list__text -->
+              </div>
+              <!-- /.blog-card blog-list__card -->
+              <div class="blog-card blog-list__card">
+                <div class="blog-list__image">
+                  <img src="img/blog-list/avto-mazeratti_maserati-transport-84.png" alt=""></div>
+                <!-- /.blog-list__image -->
+                <div class="blog-list__text">
+                  Виды печати
+                </div>
+                <!-- /.blog-list__text -->
+              </div>
+              <!-- /.blog-card blog-list__card -->
+              <div class="blog-card blog-list__card">
+                <div class="blog-list__image">
+                  <img src="img/blog-list/avto-bmv_bmw-transport-85.png" alt=""></div>
+                <!-- /.blog-list__image -->
+                <div class="blog-list__text">
+                  Виды крепежа и монтажа
+                </div>
+                <!-- /.blog-list__text -->
+              </div>
+              <!-- /.blog-card blog-list__card -->
+              <div class="blog-card blog-list__card">
+                <div class="blog-list__image">
+                  <img src="img/blog-list/art-avto-transport-46.png" alt=""></div>
+                <!-- /.blog-list__image -->
+                <div class="blog-list__text">
+                  Вопросы - ответы
+                </div>
+                <!-- /.blog-list__text -->
+              </div>
+              <!-- /.blog-card blog-list__card -->
+            </div>
+            <!-- /.blog-list -->
+          </div>
+          <!-- /.container -->
+      </section>
+      <!-- /.section blog -->
     </main>
     <!-- Подключение виджета обратной связи через соцсети-->
     <script type="text/javascript" src="https://spikmi.com/Widget?Id=3501"></script>
