--- a/index.html
+++ b/index.html
@@ -513,6 +513,73 @@
         <!-- /.container -->
       </section>
       <!-- /.section price -->
+      <section class="section steps">
+        <div class="container">
+          <h2 class="section-title section__title">
+            Этапы работ
+          </h2>
+          <!-- /.section-title section__title -->
+          <div class="steps-block">
+            <div class="step">
+              <img src="img/steps/desk.png" alt="" class="step__image">
+              <h4 class="step__title">Заявка</h4>
+              <!-- /.step__title -->
+              <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+              <!-- /.step__text -->
+            </div>
+            <!-- /.step -->
+
+            <div class="step">
+              <img src="img/steps/group-1.png" alt="" class="step__image">
+              <h4 class="step__title">Замер</h4>
+              <!-- /.step__title -->
+              <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+              <!-- /.step__text -->
+            </div>
+            <!-- /.step -->
+
+            <div class="step">
+              <img src="img/steps/ofice.png" alt="" class="step__image">
+              <h4 class="step__title">Договор</h4>
+              <!-- /.step__title -->
+              <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+              <!-- /.step__text -->
+            </div>
+            <!-- /.step -->
+
+            <div class="step">
+              <img src="img/steps/work.png" alt="" class="step__image">
+              <h4 class="step__title">Дизайн</h4>
+              <!-- /.step__title -->
+              <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+              <!-- /.step__text -->
+            </div>
+            <!-- /.step -->
+
+            <div class="step">
+              <img src="img/steps/working-at-home.png" alt="" class="step__image">
+              <h4 class="step__title">Производство</h4>
+              <!-- /.step__title -->
+              <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+              <!-- /.step__text -->
+            </div>
+            <!-- /.step -->
+
+            <div class="step">
+              <img src="img/steps/group-1.png" alt="" class="step__image">
+              <h4 class="step__title">Монтаж</h4>
+              <!-- /.step__title -->
+              <p class="step__text">Вы оставляете заявку на нашем сайте или по телефону</p>
+              <!-- /.step__text -->
+            </div>
+            <!-- /.step -->
+
+          </div>
+          <!-- /.steps-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section steps -->
     </main>
     <!-- Подключение виджета обратной связи через соцсети-->
     <script type="text/javascript" src="https://spikmi.com/Widget?Id=3501"></script>
