--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <main>
       <section class="offer bg-secondary">
         <div class="container">
-          <div class="offer__block offer-block">
+          <div class="offer__block offer-block offer-block__calc-bg">
             <h2 class="offer__title">
               Оставьте заявку на расчет
             </h2>
@@ -580,6 +580,121 @@
         <!-- /.container -->
       </section>
       <!-- /.section steps -->
+      <section class="section reviews">
+        <div class="container">
+          <h2 class="section-title section__title">
+            Отзывы наших клиентов
+          </h2>
+          <!-- /.section-title section__title -->
+          <div class="reviews-slider">
+
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__text">
+                Очень часто мы сталкиваемся с недопониманием  и пониманием со стороны сотрудников банка, и иной раз идти не хочется. В очередной раз "навешают лапши на уши" и культурно пошлют...
+              </div>
+              <!-- /.reviews-slider__text -->
+              <img src="img/reviews/user.png" alt="" class="reviews-slider__image">
+              <span class="reviews-slider__name">
+                Екатерина Иванова <br>Москва
+              </span> <!-- /.reviews-slider__name -->
+            </div>
+            <!-- /.reviews-slider__item -->
+
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__text">
+                Очень часто мы сталкиваемся  со стороны сотрудников банка, и иной раз идти не хочется. В очередной раз и культурно пошлют...
+              </div>
+              <!-- /.reviews-slider__text -->
+              <img src="img/reviews/user.png" alt="" class="reviews-slider__image">
+              <span class="reviews-slider__name">
+                Андрей Шилов <br>Тула
+              </span> <!-- /.reviews-slider__name -->
+            </div>
+            <!-- /.reviews-slider__item -->
+
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__text">
+                Очень часто мы сталкиваемся с недопониманием со стороны сотрудников банка, и иной раз идти не хочется. В очередной раз "навешают лапши на уши" и культурно пошлют...
+              </div>
+              <!-- /.reviews-slider__text -->
+              <img src="img/reviews/user.png" alt="" class="reviews-slider__image">
+              <span class="reviews-slider__name">
+                Анастасия Шпак <br>Муром
+              </span> <!-- /.reviews-slider__name -->
+            </div>
+            <!-- /.reviews-slider__item -->
+
+          </div>
+          <!-- /.reviews-slider -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section reviews -->
+
+      <section class="offer">
+        <div class="container">
+          <div class="offer__block offer-block offer-block__price-bg">
+            <h2 class="offer__title">
+              Ищите где дешевле и лучше?
+            </h2>
+            <span class="offer__subtitle">Если у вас уже есть расчет от другой фирмы, но Вы хотите дешевле, укажите и мы пересчитаем заказ с максимальной скидкой</span>
+            <form action="#!" class="form offer__form">
+              <div class="form__row">
+                <div class="form__group">
+
+                  <input type="text" class="input form__input" placeholder="Ваше имя">
+                </div>
+                <div class="form__group">
+
+                  <input type="text" class="input form__input" placeholder="Ваш телефон">
+                </div>
+                <div class="form__group">
+
+                  <input type="text" class="input form__input" placeholder="Ваша цена">
+                </div>
+              </div>
+
+              <div class="form__row">
+                <div class="form__group">
+                   <input type="submit" class="button form __button form__button-price" value="Получить расчет со скидкой">
+                </div>
+                  <div class="form__group">
+                      <div class="form__policy">Ваши данные надежно защищены. Отправление заявки ни к чему не обязывает.</div>
+                  </div>
+              </div>
+            </form>
+          </div>
+          <!-- /.offer__block offer-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.offer -->
+
+      <section class="section factory">
+        <div class="container">
+          <h2 class="section-title section__title">
+            О производстве
+          </h2>
+          <!-- /.section-title section__title -->
+          <div class="factory-block">
+            <div class="factory-block__image">
+              <img src="img/factory/pug.png" alt="">
+            </div>
+            <!-- /.factory-block__image -->
+            <div class="factory-block__text">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis ea nesciunt repellat temporibus magni atque nihil error nemo, iste beatae enim non a iusto architecto adipisci quos, quidem eius vel.</p>
+              <p>
+              At sed eaque vero consectetur nulla quod expedita, quibusdam adipisci vel error ipsum illo non facere. Commodi doloremque, ad numquam quibusdam quae sunt ipsa placeat odio cum iste a beatae.
+              Cumque, a totam? Veritatis a magnam fuga, eveniet nisi temporibus maiores! Rerum aliquaplaceat obcaecati architecto accusamus ab sunt omnis!</p>
+              
+            </div>
+            <!-- /.factory-block__text -->
+          </div>
+          <!-- /.factory-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section factory -->
     </main>
     <!-- Подключение виджета обратной связи через соцсети-->
     <script type="text/javascript" src="https://spikmi.com/Widget?Id=3501"></script>
