--- a/index.html
+++ b/index.html
@@ -695,6 +695,42 @@
         <!-- /.container -->
       </section>
       <!-- /.section factory -->
+
+      <section class="section contacts">
+        <div class="container">
+          <h2 class="section-title section__title">Контакты</h2>
+          <!-- /.h2 section-title section__title -->
+          <div class="contacts-block">
+            <div class="contacts-block__item">
+              <img src="img/contacts/phone.png" alt="" class="contacts__image">
+              <div class="contacts__text">
+                <a href="#" class="contacts__link">+7 499 123-45-67</a>
+              </div>
+              <!-- /.contacts__text -->
+            </div>
+            <!-- /.contacts-block__item -->
+            <div class="contacts-block__item">
+              <img src="img/contacts/location.png" alt="" class="contacts__image">
+              <div class="contacts__text">
+                <address class="contacts__address">Каширское шоссе, д. 23, офис 345</address>
+              </div>
+              <!-- /.contacts__text -->
+            </div>
+            <!-- /.contacts-block__item -->
+            <div class="contacts-block__item">
+              <img src="img/contacts/email.png" alt="" class="contacts__image">
+              <div class="contacts__text">
+                <a href="#" class="contacts__link">5404177@mail.ru</a>
+              </div>
+              <!-- /.contacts__text -->
+            </div>
+            <!-- /.contacts-block__item -->
+          </div>
+          <!-- /.contacts-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section contacts -->
     </main>
     <!-- Подключение виджета обратной связи через соцсети-->
     <script type="text/javascript" src="https://spikmi.com/Widget?Id=3501"></script>
