--- a/index.html
+++ b/index.html
@@ -731,8 +731,66 @@
         <!-- /.container -->
       </section>
       <!-- /.section contacts -->
+
+      <div class="map" id="map">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1484f39a96629c46c9c36f072bf4e85dc937c47eee77a402e4690b29af39933b&amp;width=100%25&amp;height=410&amp;lang=ru_RU&amp;scroll=false"></script>
+      </div>
+      <section class="section questions">
+        <div class="container">
+          <div class="questions-block">
+            <h3 class="questions__title">Остались вопросы?</h3>
+            <!-- /.questions__title -->
+            <a href="#" class="questions__link">Задайте их менеджеру</a>
+            <!-- /.question__link -->
+          </div>
+          <!-- /.questions-block -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section questions -->
     </main>
-    <!-- Подключение виджета обратной связи через соцсети-->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-block">
+          <div class="footer__description">
+            <h4 class="footer__title">Фабрика скинали №1</h4>
+            <span class="footer__subtitle">ведущий производитель скинали</span>
+            <span class="footer__copy">© Фабрика скинали №1</span>
+          </div>
+          <!-- /.footer__description -->
+          <div class="footer__pay-info">
+            <img src="img/footer/webmoney.png" alt="" width="40px" class="footer__pay-logo">
+            <img src="img/footer/yandex_money.png" alt="" width="40px" class="footer__pay-logo">
+            <img src="img/footer/mastercard.png" alt="" class="footer__pay-logo">
+            <img src="img/footer/visa.png" alt="" class="footer__pay-logo">
+
+          </div>
+
+          <!-- /.footer__pay-info -->
+          <div class="footer__contacts">
+            <a href="#" class="footer__phone">+7 499 123-45-67</a>
+            <a href="#" class="footer__mail">5404177@mail.ru</a>
+            <div class="footer-social">
+              <a href="#" class="footer-social__link">
+                <img src="img/footer/twitter.png" alt="">
+              </a>
+              <a href="#" class="footer-social__link">
+                <img src="img/footer/facebook.png" alt="">
+              </a>
+              <a href="#" class="footer-social__link">
+                <img src="img/footer/vk.png" alt="">
+              </a>
+            </div>
+          </div>
+          <!-- /.footer__contacts -->
+        </div>
+        <!-- /.footer-block -->
+      </div>
+      <!-- /.container -->
+    </footer>
+    <!-- /.footer -->
+    <!-- Подключение виджета обратной связи через соцсети
     <script type="text/javascript" src="https://spikmi.com/Widget?Id=3501"></script>
+    -->
   </body>
 </html>
