--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Фабрика скинали</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/twentytwenty.css">
   </head>
   <body>
     <header class="header">
@@ -580,6 +581,48 @@
         <!-- /.container -->
       </section>
       <!-- /.section steps -->
+
+      <section class="section before">
+        <div class="container">
+          <h2 class="section-title section__title">До и после</h2>
+          <!-- /.h2 section-title section__title -->
+          <div class="before-slider-wrap">          
+            <div class="before-slider">
+            <div class="before-slider__item">
+              <div class="before-after">
+                <img src="img/before-slider/sample-before.png" alt="">
+                <img src="img/before-slider/sample-after.png" alt="">
+              </div>
+            </div>
+            <div class="before-slider__item">              
+              <div class="before-after">
+              <img src="img/before-slider/sample-before.png" alt="">
+              <img src="img/before-slider/sample-after.png" alt="">
+            </div>
+          </div>
+            <div class="before-slider__item">              
+              <div class="before-after">
+              <img src="img/before-slider/sample-before.png" alt="">
+              <img src="img/before-slider/sample-after.png" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="before-slider-arrows">
+            <button class="arrow arrow-left">
+              <img src="img/before-slider/back.png" alt="">
+            </button>
+            <button class="arrow arrow-right">
+              <img src="img/before-slider/next.png" alt="">
+            </button>
+          </div>
+        </div>
+          <!-- /.before-slider-wrap -->
+          
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section before -->
+
       <section class="section reviews">
         <div class="container">
           <h2 class="section-title section__title">
@@ -789,8 +832,27 @@
       <!-- /.container -->
     </footer>
     <!-- /.footer -->
-    <!-- Подключение виджета обратной связи через соцсети
+    <!-- Подключение виджета обратной связи через соцсети-->
     <script type="text/javascript" src="https://spikmi.com/Widget?Id=3501"></script>
-    -->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="js/jquery.event.move.js"></script>
+    <script src="js/jquery.twentytwenty.js"></script>
+    <script src="js/slick.min.js"></script>
+    
+    <script>
+      $(window).load(function() {
+        $(".before-after").twentytwenty({
+            before_label: 'Без скинали', // Set a custom before label
+            after_label: 'Со скинали' // Set a custom after label
+        });
+        $('.before-slider').slick({
+          draggable: false,
+          dots: true,
+          dotsClass: 'before-slider__dots',
+          prevArrow: $('.arrow-left'),
+          nextArrow: $('.arrow-right')
+        });
+      });
+    </script>
   </body>
 </html>
